<resources>
    <string name="app_name">Patient follow</string>
    <string name="title_activity_list_drugs">ListDrugsActivity</string>

    <string name="DATA_BASE">db</string>


    <string name="list_drug">list drug</string>
    <string name="prescription_list">Prescriptions</string>
    <string name="drug_day">Drugs day</string>
    <string name="about_us">About us</string>

    <string name="name_drug">Name :</string>
    <string name="description_drug">Description</string>
    <string name="frequency_drug">Frequency per day</string>
    <string name="type_drug">Type</string>
    <string name="timeToTake_drug">Taking time</string>
    <string name="save">Save</string>
    <string name="changePicture">Change picture</string>
    <string name="title_activity_list_perscreptions">ListPerscreptionsActivity</string>

    <string name="activated">Activated</string>
    <string name="notActivated">Not Activated</string>

    <string name="alreadyPassed">Passed</string>
    <string name="now">Now</string>
    <string name="after">After</string>
    <string name="title_activity_list_drug_prescreption">ListDrugPrescreptionActivity</string>


</resources>
