<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@mipmap/drug720">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/listDrug"
            android:background="@drawable/my_button_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_drug"
            android:layout_gravity="bottom"
            android:onClick="goListDrugs"
            />

        <Button
            android:id="@+id/prescriptionList"
            android:background="@drawable/my_button_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prescription_list"
            android:layout_gravity="bottom"
            android:onClick="goListPrescription"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/drugDay"
            android:background="@drawable/my_button_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_day"
            android:layout_gravity="top"
            android:onClick="goListDrugDay"
            />

        <Button
            android:id="@+id/aboutUs"
            android:background="@drawable/my_button_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_us"
            android:layout_gravity="top"
            android:onClick="goAboutUs"
            />
    </LinearLayout>
</LinearLayout>