<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrugActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/name_drug"
            android:layout_weight="25"
            android:gravity="left|center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/nameDrug"
            android:layout_weight="75"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/description_drug"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/drugDescription"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/type_drug"
            android:layout_weight="25"
            android:gravity="left|center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/drugType"
            android:layout_weight="75"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/frequency_drug"
            android:layout_weight="25"
            android:gravity="left|center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/drugFrequencyPerDey"
            android:inputType="number"
            android:layout_weight="75"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/timeToTake_drug"
            android:layout_weight="25"
            android:gravity="left|center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/takingTime"
            android:layout_weight="75"
            />

    </LinearLayout>


    <ImageView
        android:id="@+id/photoDrug"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/ParentSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/changePicture"
                android:onClick="changePicture"/>


            <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="saveActualDrug"
                />

        </LinearLayout>

    </RelativeLayout>




</LinearLayout>